[package]
name = "dot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
diff = "0.1"
handlebars = "6.3"
hex = "0.4"
hostname = "0.4"
log = "0.4"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
simplelog = "0.12"
toml = "0.9"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.15"
